<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context=".ui.home.MainActivity"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/navigation_home"/>
        <item
            android:id="@+id/drawer_tables"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/navigation_tables"/>
        <item
            android:id="@+id/drawer_collection"
            android:icon="@drawable/ic_bookmark_black_24dp"
            android:title="@string/navigation_collection"/>
        <item
            android:id="@+id/drawer_error"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/navigation_error"/>
        <item
            android:id="@+id/drawer_nearly"
            android:icon="@drawable/ic_av_timer_black_24dp"
            android:title="@string/navigation_nearly"/>
    </group>
    <group
        android:id="@+id/nav_other_setting"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_theme"
            android:icon="@drawable/ic_palette_black_24dp"
            android:title="@string/navigation_theme"/>
        <item
            android:id="@+id/drawer_setting"
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/navigation_setting"/>
        <item
            android:id="@+id/drawer_about"
            android:icon="@drawable/ic_error_black_24dp"
            android:title="@string/navigation_about"/>
    </group>

</menu>
