<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    app:cardBackgroundColor="@color/blue_grey_78909c"
    app:cardCornerRadius="4dp"
    app:cardElevation="6dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content">


            <android.support.v7.widget.AppCompatCheckedTextView
                android:id="@+id/tv_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_show"
                android:textSize="16sp"/>

            <LinearLayout
                android:id="@+id/ll_select_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_question"
                android:paddingBottom="4dp"
                android:paddingLeft="20dp"
                android:paddingTop="4dp">

                <android.support.v7.widget.AppCompatCheckedTextView
                    android:id="@+id/tv_select_tab_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="A :"
                    android:textSize="16sp"/>

                <android.support.v7.widget.AppCompatCheckedTextView
                    android:id="@+id/tv_select_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_show_a"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_select_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_select_a"
                android:paddingBottom="4dp"
                android:paddingLeft="20dp"
                android:paddingTop="4dp">

                <android.support.v7.widget.AppCompatCheckedTextView
                    android:id="@+id/tv_select_tab_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="B :"
                    />

                <android.support.v7.widget.AppCompatCheckedTextView
                    android:id="@+id/tv_select_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_show_b"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_select_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_select_b"
                android:paddingBottom="4dp"
                android:paddingLeft="20dp"
                android:paddingTop="4dp">


                <android.support.v7.widget.AppCompatCheckedTextView
                    android:id="@+id/tv_select_tab_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="C :"
                    />

                <android.support.v7.widget.AppCompatCheckedTextView
                    android:id="@+id/tv_select_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_show_c"
                    >
                </android.support.v7.widget.AppCompatCheckedTextView>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_select_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_select_c"
                android:paddingBottom="4dp"
                android:paddingLeft="20dp"
                android:paddingTop="4dp">

                <android.support.v7.widget.AppCompatCheckedTextView
                    android:id="@+id/tv_select_tab_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="D :"
                    />

                <android.support.v7.widget.AppCompatCheckedTextView
                    android:id="@+id/tv_select_d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_show_d"/>

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_select_d"
                android:paddingBottom="4dp"
                android:paddingTop="4dp">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/iv_solution"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_expand_more_black_24dp"/>

                <android.support.v7.widget.AppCompatCheckedTextView
                    android:id="@+id/tv_solution_exp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/iv_solution"
                    android:gravity="center"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp"
                    android:text="@string/text_solution_button"
                    android:textColor="@color/template_green"/>

                <android.support.v7.widget.AppCompatCheckedTextView
                    android:id="@+id/tv_solution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_solution_exp"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp"
                    android:text="@string/text_solution"
                    android:textColor="@color/blue_grey"
                    android:visibility="gone"/>
            </RelativeLayout>


        </RelativeLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>
